# leaspy

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .pypirc.in  .readthedocs.yaml  .readthedocs.yml  .spell-check.txt  CHANGELOG.md  LICENSE  Makefile  README.md  TEST.txt  hatch.toml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: test.yaml  traffic.yaml
_outputs/parameter_convergence/: betas_0.csv  betas_1.csv  g.csv  mixing_matrix_0.csv  mixing_matrix_1.csv  mixing_matrix_2.csv  mixing_matrix_3.csv  mixing_matrix_4.csv  mixing_matrix_5.csv  mixing_matrix_6.csv  mixing_matrix_7.csv  mixing_matrix_8.csv  mixing_matrix_9.csv  nll_attach.csv  nll_regul_log_g.csv  nll_regul_log_v0.csv  noise_std.csv  sources_0.csv  sources_1.csv  space_shifts_0.csv  space_shifts_1.csv  space_shifts_2.csv  space_shifts_3.csv  space_shifts_4.csv  space_shifts_5.csv  space_shifts_6.csv  space_shifts_7.csv  space_shifts_8.csv  space_shifts_9.csv  tau.csv  tau_mean.csv  tau_std.csv  v0.csv  xi.csv  xi_mean.csv  xi_std.csv
browser/: app.py
browser/models/: __init__.py  personalize.py  utils.py
ci/: .pypirc.in  releases.gitlab-ci.yml
docs/: algorithms.md  conf.py  data_summary.ipynb  get_started.md  glossary.md  index.md  install.md  leaspy.algo.utils.rst  leaspy.algo.utils.samplers.gibbs_sampler.rst  leaspy.algo.utils.samplers.rst  leaspy.constants.rst  leaspy.models.joint.rst  leaspy.models.mixture.rst  leaspy.models.multivariate_ip_mixture_model.rst  leaspy.models.ordinal_multivariate_model.rst  leaspy.models.rst  leaspy.utils.mixture_tools.rst  leaspy.utils.rst  mathematics.md  mathematics.rst  models.md  models_evaluation.md  notations.md  nutshell.md  references.bib  references.md  sg_execution_times.rst  to_go_further.md  traffic_dashboard.md  tutorial_easy.md  tutorials.md  user_guide.md
docs/_static/: custom.css  custom.js
docs/auto_examples/: index.rst  plot_quickstart.codeobj.json  plot_quickstart.ipynb  plot_quickstart.py.md5  plot_quickstart.rst  sg_execution_times.rst
docs/docdev/: Dependency_management.md  contributions.md  releasing.md  traffic_monitoring.md
example/start/: starter.ipynb
examples/: GALLERY_HEADER.rst  plot_01_quickstart.py  plot_02_parkinson_example.py  plot_03_joint.py  plot_04_mixture.py  plot_05_simulate.py  plot_mixture.py  plot_parkinson_example.py  plot_quickstart.py  plot_simulate.py
examples/_outputs/parameter_convergence/: betas_0.csv  mixing_matrix_0.csv  sources_0.csv  space_shifts_1.csv  space_shifts_3.csv  tau.csv
leaspy/: __init__.py  api.py  constants.py  exceptions.py
leaspy/algo/: abstract_algo.py  algo_factory.py
leaspy/algo/fit/: abstract_fit_algo.py  abstract_mcmc.py
leaspy/algo/others/: constant_prediction_algo.py  lme_fit.py  lme_personalize.py
leaspy/algo/personalize/: abstract_personalize_algo.py  scipy_minimize.py
leaspy/algo/simulate/: simulate.py
leaspy/datasets/model_parameters/: alzheimer-multivariate-model_parameters.json  parkinson-multivariate-model_parameters.json  parkinson-putamen-train-model_parameters.json
leaspy/io/data/: data.py  dataframe_data_reader.py  dataset.py  event_dataframe_data_reader.py  individual_data.py  joint_dataframe_data_reader.py  visit_dataframe_data_reader.py
leaspy/io/logs/: fit_output_manager.py
leaspy/io/outputs/: individual_parameters.py
leaspy/io/realizations/: realization.py
leaspy/io/settings/: algorithm_settings.py  model_settings.py  outputs_settings.py
leaspy/models/: __init__.py  abstract_model.py  abstract_multivariate_model.py  base.py  constant.py  factory.py  joint.py  mixture.py  multivariate.py  multivariate_ip_mixture_model.py  multivariate_parallel.py  ordinal_multivariate_model.py  univariate.py  univariate_joint.py  utilities.py
leaspy/models/noise_models/: ordinal.py
leaspy/models/obs_models/: __init__.py  _base.py  _beta.py  _factory.py  _gaussian.py  _mixture_gaussian.py  _ordinal.py  (+1 more)
leaspy/utils/: distributions.py  helpers.py  mixture_tools.py
leaspy/variables/: dag.py  distributions.py  specs.py  state.py
script/: run_multi_python_interpreter_tests.sh
src/leaspy/: __init__.py  api.py
tests/unit_tests/: test_api.py  test_api_constant_model.py  test_api_lme_model.py
tests/utils/: class_property.py  leaspy_test_case.py
traffic/: fetch_traffic.py  visualize_traffic.py
traffic/data/: .gitkeep  clones.csv  popular_paths.csv  referrers.csv  views.csv  weekly_summary.csv
(+358 files in other folders)
