[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "leaspy"
dynamic = ["version"]
description = "Leaspy is a software package for the statistical analysis of longitudinal data."
readme = "README.md"
license = "BSD-3-Clause"
requires-python = ">=3.9, <3.12"
authors = [
    { name = "AramisLab Research Team" },
]
maintainers = [
    { name = "Nicolas Gensollen", email = "nicolas.gensollen@inria.fr" },
]
keywords = [
    "leaspy",
    "longitudinal",
    "mixed-model",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "joblib>=1.2.0",
    "lifelines>=0.27.4",
    "matplotlib>=3.6.3,<4",
    "numpy>=1.26.4,<2",
    "pandas>=2.2.2,<3",
    "scikit-learn>=1.2.2,<2",
    "scipy>=1.13.1",
    "statsmodels>=0.13.5,<1",
    "torch>=2.2.0",
]

[project.optional-dependencies]
dev = [
    "numpydoc",
    "pytest",
    "pytest-cov",
    "pytest-subtests",
]
docs = [
    "numpydoc>=1.1.0",
    "sphinx-autodoc-typehints",
    "sphinx-gallery>=0.8.1",
    "sphinx>=3.3.1",
    "sphinx_rtd_theme",
    "sphinx_theme>=1.0",
]

[project.urls]
"Bug Reports" = "https://gitlab.com/icm-institute/aramislab/leaspy/issues"
Documentation = "https://leaspy.readthedocs.io"
Homepage = "https://gitlab.com/icm-institute/aramislab/leaspy"
Source = "https://gitlab.com/icm-institute/aramislab/leaspy"

[tool.hatch.version]
path = "leaspy/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/leaspy",
]

[tool.ruff]
target-version = "py39"
line-length = 88
indent-width = 4
src = ["leaspy", "tests"]

[tool.ruff.lint]
select = [
    "E",
    "W",
    "I001",
]
ignore = ["E203", "E501"]

[tool.ruff.lint.isort]
known-first-party = ["leaspy"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

