[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "leaspy"
version = "2.0.0.dev"
description = "Leaspy is a software package for the statistical analysis of longitudinal data."
readme = "README.md"
documentation = "https://leaspy.readthedocs.io"
homepage = "https://gitlab.com/icm-institute/aramislab/leaspy"
repository = "https://gitlab.com/icm-institute/aramislab/leaspy"
license = "BSD-3-Clause"
authors = ["AramisLab Research Team"]
maintainers = ["Nicolas Gensollen <nicolas.gensollen@inria.fr>"]
keywords = [
    "leaspy",
    "longitudinal",
    "mixed-model",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
packages = [{include = "leaspy", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
joblib = ">=1.2.0"
lifelines = ">=0.27.4"
matplotlib = ">=3.6.3,<4"
numpy = ">=1.26.4,<2"
pandas = ">=2.2.2,<3"
scikit-learn = ">=1.2.2,<2"
scipy = ">=1.13.1"
statsmodels = ">=0.13.5,<1"
torch = ">=2.2.0"

[tool.poetry.group.dev.dependencies]
numpydoc = "*"
pytest = "*"
pytest-cov = "*"
pytest-subtests = "*"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
numpydoc = ">=1.1.0"
sphinx-autodoc-typehints = "*"
sphinx-gallery = ">=0.8.1"
sphinx = ">=3.3.1"
sphinx_rtd_theme = "*"
sphinx_theme = ">=1.0"
sphinx-autoapi = "*"
myst-nb = "*"

[tool.ruff]
target-version = "py39"
line-length = 88
indent-width = 4
src = ["leaspy", "tests"]

[tool.ruff.lint]
select = [
    "E",
    "W",
    "I001",
]
ignore = ["E203", "E501"]

[tool.ruff.lint.isort]
known-first-party = ["leaspy"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

